; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/fslib/btrfslib/extr_btrfslib.c_clear_first_megabyte.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/fslib/btrfslib/extr_btrfslib.c_clear_first_megabyte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@HEAP_ZERO_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @clear_first_megabyte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clear_first_megabyte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %7 = call i32* @malloc(i32 1048576)
  store i32* %7, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = call i32 @memset(i32* %8, i32 0, i32 1048576)
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i64 0, i64* %10, align 8
  %11 = load i32, i32* %2, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @NtWriteFile(i32 %11, i32* null, i32* null, i32* null, i32* %4, i32* %12, i32 1048576, %struct.TYPE_3__* %5, i32* null)
  store i32 %13, i32* %3, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @free(i32* %14)
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @NtWriteFile(i32, i32*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_3__*, i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
